projects/nanousd-labs/nanousd/tests/usda/invalid/int_overflow.usda
#usda 1.0

def Scope "T"
{
    int tooLarge = 2147483648
}
